# TEST-PROJECT

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README-ops.md  index.html  pyproject.toml  pytest.ini  share.html
.claude/: settings.json
config/: brands.yaml  rule_profile.yaml
docs/: 00-research-ledger.md  01-product-context.md  02-architecture.md  03-engine-validation-plan.md  04-saju-ziwei-schema.md  05-nlg-pdf-generation.md  06-llm-usage-policy.md  07-safety-and-compliance.md  08-claude-codex-mcp-skills-plan.md  09-roadmap.md  10-admin-review-workflow.md  11-manselyeok-reference-cases.md  12-shinsal-research.md  13-reading-design-psychology.md  14-tone-spec.md  15-beta-plan.md  16-quality-incident-ledger.md  17-agent-tooling-runbook.md  global-claude-settings.snapshot.json
handoff/: H1_5_CHECKPOINT.md  PROJECT_CONTEXT_AND_HARNESS_BRIEF_FOR_CHATGPT.md
harness/: project.yml
saju-growth-system/: MASTER-PLAN-v2.md  PASTE-READY.html  README.md
sajugen/: STATE.md  admin.py  app.py  cli.py  config.py  delete_order.py  gunghap.py  insight.py  integrated.py  order_flow.py  pipeline.py
scripts/: ai-harness.ps1  dump_reading.py  hpreflight.py  hprofile_check.py  hrun.py  hsemantic_review.py  hstate.py  hsummary.py  hverify_pdf.py  kasi_dump.py  verify_kasi_cache.py  verify_ziwei_parity.py
tests/: conftest.py  playwright_guard.py  test_admin_ui.py  test_ai_harness_contract.py  test_client_tone.py  test_consistency.py  test_cover_semantic_clean.py  test_customer_meta_lint.py  test_delivery_quality.py  test_golden_sweep.py  test_gunghap.py  test_harness.py  (+29 more)
(+132 files in other folders)
