[project]
name = "sajugen"
version = "0.1.0"
description = "사주(명리 메인) + 자미두수(보완) 종합형 PDF 리포트 생성기 — 운영자 1인 내부 도구"
requires-python = ">=3.11"
# 의존성 = sajugen 코드가 실제 import 하는 직접 의존만(설치본 버전 기준 floor).
# lunar-python 은 절대규칙 2에 따라 1.4.8 고정(이후 미릴리스, 알려진 이슈 자체 회귀로 커버).
dependencies = [
    "lunar-python==1.4.8",
    "iztro-py>=0.3.4",
    "skyfield>=1.54",
    "jinja2>=3.1",
    "playwright>=1.59",
    "pymupdf>=1.27",
    "fastapi>=0.136",
    "uvicorn>=0.47",
    "pydantic>=2.13",
    "instructor>=1.15",
    "anthropic>=0.102",
    "httpx>=0.27",
    "python-dotenv>=1.2",
    "typer>=0.25",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-timeout>=2.4",
    "ruff>=0.4",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["sajugen*"]
